--- a/projects/marx-editor/src/editor-menu/editor-menu.component.less
+++ b/projects/marx-editor/src/editor-menu/editor-menu.component.less
@@ -6,7 +6,7 @@
         position: relative;
 
         &+.col {
-            margin-left: 2%;
+            margin-left: 6px;
         }
 
         .popover {
@@ -201,6 +201,10 @@
                     line-height    : 24px;
                     height         : 28px;
                     position       : relative;
+                    &:disabled {
+                        cursor: not-allowed;
+                        filter: grayscale(1);
+                    }
 
                     &+button {
                         margin-left: 5px;
@@ -280,8 +284,36 @@
                 }
             }
             &.color-palette {
-                width: 163px;
+                width: 165px;
                 padding: 10px;
+                .tab {
+                    display: block;
+                    &-head {
+                        display: flex;
+                        button {
+                            width: 50%;
+                            background: transparent;
+                            border-bottom: 2px solid #F1F1F1;
+                            padding-top: 5px;
+                            padding-bottom: 5px;
+                            height: auto;
+                            display: flex;
+                            justify-content: center;
+                            svg {
+                                width: 16px;
+                                height: 16px;
+                            }
+
+                            &.active {
+                                background: transparent;
+                                border-color: #1e5dd3;
+                            }
+                        }
+                    }
+                    &-body {
+                        padding-top: 10px;
+                    }
+                }
             }
 
             &.attach {
@@ -367,6 +399,9 @@
     .left, .right {
         display: flex;
     }
+    // .left {
+    //     width: 100%;
+    // }
     .right {
         padding: 0 10px 0 0;
     }
@@ -384,7 +419,6 @@
     justify-content: center;
     align-items    : center;
 }
-
 
 .error {
     font-size: 11px;
@@ -423,4 +457,11 @@
     background-color: chartreuse;
     padding: 10px 10px 10px 10px;
 }
-
+.popover-overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+}
