--- a/projects/marx-editor/src/tools/color-palette/color-palette.component.less
+++ b/projects/marx-editor/src/tools/color-palette/color-palette.component.less
@@ -3,76 +3,101 @@
     flex-wrap: wrap;
     margin: 0 -6px;
     .colors {
-        padding: 3px;
-        border-radius: 4px;
-        margin-bottom: 5px;
-        position: relative;
-        input[type=radio] {
-            opacity: 0;
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            height: 100%;
-            width: 100%;
-            z-index: 2;
-            cursor: pointer;
-            &:checked {
-                &+span {
-                    &:after {
-                        content: "";
-                        position: absolute;
-                        top: 8px;
-                        right: 8px;
-                        bottom: 8px;
-                        left: 8px;
-                        border: 2px solid #FFFFFF;
-                        border-radius: 50%;
-                    }
-                    &.white {
-                        &:after {
-                            border-color: #000000;
-                        }
-                    }
-                    
-                }
-            }
-        }
-        span {
-            height: 25px;
-            width: 25px;
-            border-radius: 50%;
-            display: block;
-            border: 2px solid #F1F1F1;
-
-            &.red {
-                background: #FF5630;
-            }
-            &.black {
-                background: #000000;
-            }
-            &.grey {
-                background: #414141;
-            }
-            &.green {
-                background: #36B37E;
-            }
-            &.purple {
-                background: #6554C0;
-            }
-            &.orange {
-                background: #FF7A00;
-            }
-            &.teal {
-                background: #008299;
+      padding: 3px;
+      border-radius: 4px;
+      margin-bottom: 5px;
+      position: relative;
+      input[type="radio"] {
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        z-index: 2;
+        cursor: pointer;
+        &:checked {
+          & + span {
+            &:after {
+              content: "";
+              position: absolute;
+              top: 8px;
+              right: 8px;
+              bottom: 8px;
+              left: 8px;
+              border: 2px solid #ffffff;
+              border-radius: 50%;
             }
             &.white {
-                background: #FFFFFF;
+              &:after {
+                border-color: #000000;
+              }
             }
-            &.yellow {
-                background: #F0B819;
-            }
+          }
         }
+      }
+      span {
+        height: 25px;
+        width: 25px;
+        border-radius: 50%;
+        display: block;
+        border: 2px solid #f1f1f1;
+        overflow: hidden;
+  
+        &.red {
+          background: #ff5630;
+        }
+        &.black {
+          background: #000000;
+        }
+        &.grey {
+          background: #414141;
+        }
+        &.green {
+          background: #36b37e;
+        }
+        &.purple {
+          background: #6554c0;
+        }
+        &.orange {
+          background: #ff7a00;
+        }
+        &.teal {
+          background: #008299;
+        }
+        &.white {
+          background: #ffffff;
+        }
+        &.yellow {
+          background: #f0b819;
+        }
+        &.transparent {
+          background: transparent;
+          position: relative;
+          &:before {
+            content: "";
+            position: absolute;
+            border: 2px solid #ff5630;
+            top: 3px;
+            right: 3px;
+            bottom: 3px;
+            left: 3px;
+            border-radius: 50%;
+          }
+          &:after {
+            content: "";
+            position: absolute;
+            top: 5px;
+            bottom: 5px;
+            width: 2px;
+            left: calc(50% - 1px);
+            background: #ff5630;
+            transform: rotate(-40deg);
+          }
+        }
+      }
     }
-}
+  }
+  
