--- a/projects/marx-editor/src/editor-menu/editor-menu.component.less
+++ b/projects/marx-editor/src/editor-menu/editor-menu.component.less
@@ -146,38 +146,7 @@
                 }
             }
 
-            .link {
-                display      : block;
-                margin-bottom: 20px;
-
-                label {
-                    font-size        : 11px;
-                    color            : #161b2f;
-                    // text-transform: uppercase;
-                    margin-bottom    : 0;
-                }
-
-                input {
-                    font-size    : 11px;
-                    height       : 22px;
-                    line-height  : 20px;
-                    padding      : 4px 0;
-                    border       : none;
-                    border-bottom: 1px solid #F1F1F1;
-                    outline      : none;
-                    position     : relative;
-                    width        : 100%;
-                    color        : #747576;
-
-                    &:focus {
-                        border-color: #1e5dd3;
-                    }
-                }
-
-                &+.link {
-                    margin-top: 20px;
-                }
-            }
+            
 
             .footer {
                 background     : #F3F3F3;
@@ -338,15 +307,6 @@
         cursor       : pointer;
         border       : none;
         background   : #FFFFFF;
-        &.large {
-            padding: 0 4px;
-        }
-        &.lg {
-            svg {
-                transform: scale(1.4);
-            }
-        }
-
         &.bgcolor,
         &.textcolor {
             svg {
@@ -367,8 +327,8 @@
         svg {
             height: 26px;
             width : 26px;
-            fill  : #161b2f;
-            stroke: #161b2f;
+            fill  : #5a5a5a;
+            stroke: #5a5a5a;
             pointer-events: none;
         }
 
@@ -467,4 +427,227 @@
     bottom: 0;
     left: 0;
     z-index: 1;
+}
+.popup-container {
+    width: 450px;
+    .head {
+        background     : #F3F3F3;
+        padding        : 10px 15px;
+        display        : flex;
+        justify-content: space-between;
+        position       : relative;
+        align-items    : center;
+        margin         : 0 0 20px;
+        border-radius: 4px 4px 0 0;
+
+        h3 {
+            font-size  : 14px;
+            font-weight: 500;
+            margin     : 0;
+        }
+
+        .close {
+            border: none;
+            color: #161b2f;
+            cursor: pointer;
+            font-size: 20px;
+            outline: none;
+            background: transparent;
+            line-height: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0;
+            height: auto;
+            width: auto;
+        }
+    }
+    .body {
+        padding: 15px;
+    }
+    .drag-drop {
+        position       : relative;
+        height         : 150px;
+        background     : #fbfbfb;
+        border         : 2px dashed #F1f1F1;
+        border-radius  : 2px;
+        display        : flex;
+        justify-content: center;
+        align-items    : center;
+        padding        : 10px;
+        margin-bottom  : 10px;
+
+        &.enter {
+            border-color: #1e5dd3;
+
+            label,
+            span {
+                pointer-events: none;
+            }
+
+            input {
+                pointer-events: visible;
+            }
+        }
+
+        input[type=file] {
+            position      : absolute;
+            margin        : 0;
+            height        : 100%;
+            width         : 100%;
+            top           : 0;
+            right         : 0;
+            bottom        : 0;
+            left          : 0;
+            opacity       : 0;
+            cursor        : pointer;
+            outline       : none;
+            pointer-events: none;
+        }
+
+        .container {
+            display        : flex;
+            flex-wrap      : wrap;
+            justify-content: center;
+        }
+
+        span {
+            font-size     : 11px;
+            color         : #747576;
+            text-transform: uppercase;
+            pointer-events: none;
+            text-align    : center;
+            width         : 100%;
+            display       : block;
+            margin-bottom : 10px;
+        }
+
+        label {
+            font-size      : 11px;
+            text-transform : uppercase;
+            border         : 1px solid #1e5dd3;
+            color          : #FFFFFF;
+            text-transform : uppercase;
+            width          : auto;
+            padding        : 0 10px;
+            background     : #1e5dd3;
+            border-radius  : 2px;
+            cursor         : pointer;
+            display        : flex;
+            justify-content: center;
+            align-items    : center;
+            line-height    : 24px;
+            height         : 24px;
+            position       : relative;
+
+            &:hover {
+                &:before {
+                    content   : "";
+                    top       : 0;
+                    right     : 0;
+                    bottom    : 0;
+                    left      : 0;
+                    background: rgba(0, 0, 0, 0.09);
+                    z-index   : 1;
+                    position  : absolute;
+                }
+            }
+        }
+    }
+    .footer {
+        background     : #F3F3F3;
+        padding        : 10px;
+        display        : flex;
+        justify-content: flex-end;
+        margin         : 0;
+        border-radius: 0 0 4px 4px;
+
+        button {
+            font-size      : 11px;
+            text-transform : uppercase;
+            border         : 1px solid;
+            text-transform : uppercase;
+            width          : auto;
+            padding        : 0 10px;
+            border-radius  : 2px;
+            cursor         : pointer;
+            display        : flex;
+            justify-content: center;
+            align-items    : center;
+            line-height    : 24px;
+            height         : 28px;
+            position       : relative;
+            outline: none;
+            &:disabled {
+                cursor: not-allowed;
+                filter: grayscale(1);
+            }
+
+            &+button {
+                margin-left: 5px;
+            }
+
+            &:hover {
+                &:before {
+                    content   : "";
+                    top       : 0;
+                    right     : 0;
+                    bottom    : 0;
+                    left      : 0;
+                    background: rgba(0, 0, 0, 0.09);
+                    z-index   : 1;
+                    position  : absolute;
+                }
+            }
+
+            &.cancel {
+                color       : #1e5dd3;
+                background  : #FFFFFF;
+                border-color: #FFFFFF;
+            }
+
+            &.upload {
+                background  : #1e5dd3;
+                border-color: #1e5dd3;
+                color       : #FFFFFF;
+
+                &.disabled {
+                    pointer-events: none;
+                    filter: grayscale(1);
+                }
+            }
+        }
+    }
+    .link {
+        display      : block;
+        margin-bottom: 20px;
+    
+        label {
+            font-size        : 11px;
+            color            : #161b2f;
+            // text-transform: uppercase;
+            margin-bottom    : 0;
+        }
+    
+        input {
+            font-size    : 11px;
+            height       : 22px;
+            line-height  : 20px;
+            padding      : 4px 0;
+            border       : none;
+            border-bottom: 1px solid #F1F1F1;
+            outline      : none;
+            position     : relative;
+            width        : 100%;
+            color        : #747576;
+    
+            &:focus {
+                border-color: #1e5dd3;
+            }
+        }
+    
+        &+.link {
+            margin-top: 20px;
+        }
+    }
 }
