--- a/projects/marx-editor/src/theme.less
+++ b/projects/marx-editor/src/theme.less
@@ -307,6 +307,9 @@ input::-webkit-inner-spin-button {
             right          : 0;
             z-index        : 3;
             background     : transparent !important;
+            border: none;
+            outline: none;
+            cursor: pointer;
 
             span {
                 height         : 18px;
